[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://images/player/player_idle.tres" type="SpriteFrames" id=2]
[ext_resource path="res://sounds/mixkit-game-gun-shot-1662.mp3" type="AudioStream" id=3]
[ext_resource path="res://images/player/player_walk.tres" type="SpriteFrames" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0357

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[node name="Player" type="KinematicBody2D"]
collision_layer = 129
script = ExtResource( 1 )
idle = ExtResource( 2 )
walk = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 17, 11 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="DegenTimer" type="Timer" parent="."]

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="DegenTimer" to="." method="_on_DegenTimer_timeout"]
